--- a/css/utilitario/cores.css
+++ b/css/utilitario/cores.css
@@ -22,3 +22,79 @@
   --cor-c8: #222222;
   --cor-c9: #171717;
 }
+
+.cor-p0 {
+  color: var(--cor-p0);
+}
+
+.cor-p1 {
+  color: var(--cor-p1);
+}
+
+.cor-p2 {
+  color: var(--cor-p2);
+}
+
+.cor-p3 {
+  color: var(--cor-p3);
+}
+
+.cor-p4 {
+  color: var(--cor-p4);
+}
+
+.cor-p5 {
+  color: var(--cor-p5);
+}
+
+.cor-p6 {
+  color: var(--cor-p6);
+}
+
+.cor-p7 {
+  color: var(--cor-p7);
+}
+
+.cor-p8 {
+  color: var(--cor-p8);
+}
+
+.cor-c0 {
+  color: var(--cor-c0);
+}
+
+.cor-c1 {
+  color: var(--cor-c1);
+}
+
+.cor-c2 {
+  color: var(--cor-c2);
+}
+
+.cor-c3 {
+  color: var(--cor-c3);
+}
+
+.cor-c4 {
+  color: var(--cor-c4);
+}
+
+.cor-c5 {
+  color: var(--cor-c5);
+}
+
+.cor-c6 {
+  color: var(--cor-c6);
+}
+
+.cor-c7 {
+  color: var(--cor-c7);
+}
+
+.cor-c8 {
+  color: var(--cor-c8);
+}
+
+.cor-c9 {
+  color: var(--cor-c9);
+}
