Introducão home pronta

--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,5 @@
-body {
+body,
+h1 {
   margin: 0;
   padding: 0;
 }
@@ -10,6 +11,10 @@ li {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+img {
+  max-width: 100%;
 }
 
 /* Container */
