--- a/css/home/cardapio.css
+++ b/css/home/cardapio.css
@@ -1,6 +1,7 @@
 .cardapio-bg {
   background-color: var(--cor-c7);
   padding-top: 140px;
+  padding-bottom: 120px;
 }
 
 .cardapio {
@@ -68,7 +69,6 @@
     top: -38px;
     left: 51.5%;
   }
-
   .cardapio picture {
     align-self: center;
   }
@@ -76,21 +76,19 @@
 
 @media (max-width: 1000px) {
   .cardapio-bg {
-    padding-top: 100px;
+    padding-top: 79px;
   }
-
   .cardapio {
     justify-content: center;
-    box-shadow: 0px -100px rgba(250, 250, 250, 1);
-    padding-top: 106px;
+    box-shadow: 0px -80px rgba(250, 250, 250, 1);
+    padding-top: 80px;
   }
   .cardapio-detalhe {
-    left: 45%;
+    left: 42%;
   }
   .cardapio h1 {
     margin-top: 0px;
   }
-
   .cardapio .foto {
     display: none;
   }
@@ -108,10 +106,26 @@
 }
 
 @media (max-width: 600px) {
+  .cardapio-conteudo {
+    justify-self: center;
+    min-width: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .cardapio-bg {
+    padding-top: 59px;
+  }
+  .cardapio {
+    box-shadow: 0px -60px rgba(250, 250, 250, 1);
+  }
+  .cardapio p {
+    margin-top: 24px;
+    margin-bottom: 40px;
+  }
   .cardapio-detalhe {
-    left: 40%;
-    width: 100px;
-    height: 80px;
-    top: -34px;
+    left: 44.5%;
+    width: 60px;
+    height: 48px;
+    top: -20px;
   }
 }
