--- a/css/utilitario/tipografia.css
+++ b/css/utilitario/tipografia.css
@@ -47,6 +47,7 @@
 @media (max-width: 1200px) {
   .font-1-x {
     font-size: 54px;
+    line-height: 54px;
   }
   .font-2-s,
   .font-2-s-1 {
@@ -56,20 +57,49 @@
   .font-2-l-2 {
     font-size: 24px;
   }
-
-  .font-1-xl {
-    font-size: 76px;
-    line-height: 84px;
-  }
 }
 
 @media (max-width: 600px) {
   .font-1-x {
     font-size: 44px;
+    line-height: 44px;
   }
   .font-2-s,
   .font-2-s-1 {
     font-size: 16px;
     line-height: 22px;
+  }
+  .font-2-l-2 {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+@media (max-width: 500px) {
+  .font-1-x {
+    font-size: 36px;
+    line-height: 36px;
+  }
+  .font-2-s,
+  .font-2-s-1 {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+
+@media (max-width: 400px) {
+  .font-1-x {
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  .font-2-s,
+  .font-2-s-1 {
+    font-size: 12px;
+    line-height: 16px;
+  }
+  .font-2-l-2 {
+    font-size: 14px;
+    line-height: 14px;
   }
 }
