--- a/css/global.css
+++ b/css/global.css
@@ -44,6 +44,16 @@ img {
   }
 }
 
+/* Botao */
+.botao {
+  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
+}
+
+.botao:hover {
+  transition: 0.3s;
+  padding: 15px 30px;
+}
+
 /* Header-cabeçalho */
 .header-bg {
   background-color: var(--cor-p0);
@@ -79,8 +89,12 @@ img {
   transition: 0.3s;
 }
 
-.header li a:hover:after {
-  width: calc(100% - 10px);
+.header .ativo::after {
+  width: 90%;
+}
+
+.header li a:hover::after {
+  width: 90%;
 }
 
 @media (max-width: 1000px) {
