--- a/css/home/cardapio.css
+++ b/css/home/cardapio.css
@@ -50,6 +50,10 @@
   justify-self: start;
 }
 
+.cardapio-detalhe_e {
+  display: none;
+}
+
 @media (max-width: 1200px) {
   .cardapio {
     gap: 40px;
@@ -67,7 +71,7 @@
     height: 140px;
     width: 116px;
     top: -38px;
-    left: 51.5%;
+    left: calc(50vw + 10px);
   }
   .cardapio picture {
     align-self: center;
@@ -77,6 +81,7 @@
 @media (max-width: 1000px) {
   .cardapio-bg {
     padding-top: 79px;
+    padding-bottom: 80px;
   }
   .cardapio {
     justify-content: center;
@@ -84,7 +89,10 @@
     padding-top: 80px;
   }
   .cardapio-detalhe {
-    left: 42%;
+    left: calc(50vw - 25px);
+    width: 60px;
+    height: 48px;
+    top: -20px;
   }
   .cardapio h1 {
     margin-top: 0px;
@@ -103,6 +111,13 @@
   .cardapio a {
     justify-self: center;
   }
+  .cardapio-detalhe_e {
+    display: block;
+    position: absolute;
+    width: 60px;
+    height: 48px;
+    bottom: -104px;
+  }
 }
 
 @media (max-width: 600px) {
@@ -113,7 +128,15 @@
     grid-template-columns: 1fr;
   }
   .cardapio-bg {
-    padding-top: 59px;
+    padding-top: 60px;
+  }
+  .cardapio-detalhe,
+  .cardapio-detalhe_e {
+    width: 48px;
+    height: 28px;
+  }
+  .cardapio-detalhe_e {
+    bottom: -88px;
   }
   .cardapio {
     box-shadow: 0px -60px rgba(250, 250, 250, 1);
@@ -121,11 +144,5 @@
   .cardapio p {
     margin-top: 24px;
     margin-bottom: 40px;
-  }
-  .cardapio-detalhe {
-    left: 44.5%;
-    width: 60px;
-    height: 48px;
-    top: -20px;
   }
 }
