--- a/css/home/parceiros.css
+++ b/css/home/parceiros.css
@@ -45,6 +45,9 @@
   }
 }
 @media (max-width: 1000px) {
+  .parceiros {
+    padding-top: 100px;
+  }
   .parceiros-conteudo {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -67,6 +70,9 @@
   }
 }
 @media (max-width: 600px) {
+  .parceiros {
+    padding-top: 80px;
+  }
   .parceiros-conteudo {
     grid-template-columns: 1fr;
     gap: 50px;
@@ -80,15 +86,25 @@
   }
 }
 @media (max-width: 500px) {
+  .parceiros {
+    padding-top: 60px;
+  }
   .parceiros img {
     min-width: 55%;
+  }
+  .parceiros-conteudo {
+    margin-top: 52px;
   }
   .parceiros-conteudo img:last-child {
     min-width: 55%;
   }
 }
 @media (max-width: 400px) {
+  .parceiros {
+    padding-bottom: 80px;
+  }
   .parceiros-conteudo {
+    padding-bottom: 0px;
     gap: 40px;
   }
   .parceiros img {
