--- a/css/global/footer.css
+++ b/css/global/footer.css
@@ -32,7 +32,7 @@
   width: calc(100vw - (100vw - 1160px));
 }
 
-.footer-internos {
+.footer-internos li {
   display: grid;
   grid-template-columns: auto auto;
   gap: 16px;
@@ -58,7 +58,7 @@
 }
 
 @media (max-width: 800px) {
-  .footer-internos {
+  .footer-internos li {
     display: grid;
     grid-template-columns: 1fr;
   }
