--- a/css/global/header.css
+++ b/css/global/header.css
@@ -61,7 +61,21 @@
     display: grid;
     align-self: center;
   }
+  .header .ativo::after {
+    width: 85%;
+  }
+  .header li a:hover::after {
+    width: 85%;
+  }
   .header a {
     padding: 5px 10px;
+  }
+}
+@media (max-width: 400px) {
+  .header .ativo::after {
+    width: 75%;
+  }
+  .header li a:hover::after {
+    width: 75%;
   }
 }
