--- a/css/utilitario/tipografia.css
+++ b/css/utilitario/tipografia.css
@@ -45,13 +45,21 @@
 }
 
 @media (max-width: 1200px) {
-  .font-1-x {
-    font-size: 54px;
-    line-height: 54px;
+  .font-1-xl {
+    font-size: 48px;
+    line-height: 48px;
   }
   .font-1-xl-1 {
     font-size: 80px;
     line-height: 80px;
+  }
+  .font-1-x {
+    font-size: 54px;
+    line-height: 54px;
+  }
+  .font-2-l {
+    font-size: 20px;
+    line-height: 22px;
   }
   .font-2-s,
   .font-2-s-1 {
@@ -67,6 +75,14 @@
   .font-1-xl-1 {
     font-size: 72px;
     line-height: 72px;
+  }
+  .font-2-l {
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .font-2-s {
+    font-size: 16px;
+    line-height: 22px;
   }
 }
 
@@ -98,6 +114,11 @@
 }
 
 @media (max-width: 500px) {
+  .font-1-xl {
+    font-size: 44px;
+    line-height: 44px;
+  }
+
   .font-1-x {
     font-size: 36px;
     line-height: 36px;
@@ -114,6 +135,11 @@
 }
 
 @media (max-width: 400px) {
+  .font-1-xl {
+    font-size: 40px;
+    line-height: 40px;
+  }
+
   .font-1-x {
     font-size: 28px;
     line-height: 28px;
