--- a/css/home/cardapio.css
+++ b/css/home/cardapio.css
@@ -1,10 +1,10 @@
-.cardapio-bg {
+.home-cardapio-bg {
   background-color: var(--cor-c7);
   padding-top: 140px;
   padding-bottom: 120px;
 }
 
-.cardapio {
+.home-cardapio {
   display: flex;
   box-shadow: 0px -140px rgba(250, 250, 250, 1);
   gap: 140px;
@@ -13,105 +13,105 @@
   align-items: center;
 }
 
-.cardapio-detalhe {
+.home-cardapio-detalhe {
   position: absolute;
   top: -56px;
   left: 45.9375%;
 }
 
-.cardapio .foto {
+.home-cardapio .foto {
   border-radius: 4px;
   display: grid;
   justify-content: right;
 }
 
-.cardapio-conteudo {
+.home-cardapio-conteudo {
   display: grid;
   min-width: 460px;
   padding-right: calc((100vw - 1200px) / 2);
   justify-content: left;
 }
 
-.cardapio h1 {
+.home-cardapio h1 {
   margin-top: 112px;
   display: inline;
 }
 
-.cardapio p {
+.home-cardapio p {
   margin-top: 48px;
   max-width: 35ch;
   margin-bottom: 72px;
 }
 
-.cardapio a {
+.home-cardapio a {
   background-color: var(--cor-p1);
   padding: 10px 20px;
   border-radius: 4px;
   justify-self: start;
 }
 
-.cardapio-detalhe_e {
+.home-cardapio-detalhe_e {
   display: none;
 }
 
 @media (max-width: 1200px) {
-  .cardapio {
+  .home-cardapio {
     gap: 40px;
     padding-top: 108px;
   }
-  .cardapio-conteudo {
+  .home-cardapio-conteudo {
     padding-right: calc((100vw - 1060px) / 2);
     min-width: 400px;
   }
-  .cardapio p {
+  .home-cardapio p {
     margin-top: 36px;
     margin-bottom: 42px;
   }
-  .cardapio-detalhe {
+  .home-cardapio-detalhe {
     height: 140px;
     width: 116px;
     top: -38px;
     left: calc(50vw + 10px);
   }
-  .cardapio picture {
+  .home-cardapio picture {
     align-self: center;
   }
 }
 
 @media (max-width: 1000px) {
-  .cardapio-bg {
+  .home-cardapio-bg {
     padding-top: 79px;
     padding-bottom: 80px;
   }
-  .cardapio {
+  .home-cardapio {
     justify-content: center;
     box-shadow: 0px -80px rgba(250, 250, 250, 1);
     padding-top: 80px;
   }
-  .cardapio-detalhe {
+  .home-cardapio-detalhe {
     left: calc(50vw - 25px);
     width: 60px;
     height: 48px;
     top: -20px;
   }
-  .cardapio h1 {
+  .home-cardapio h1 {
     margin-top: 0px;
   }
-  .cardapio .foto {
+  .home-cardapio .foto {
     display: none;
   }
-  .cardapio-conteudo {
+  .home-cardapio-conteudo {
     margin-right: 40px;
     justify-items: center;
   }
-  .cardapio p {
+  .home-cardapio p {
     text-align: center;
     max-width: 45ch;
   }
-  .cardapio a {
+  .home-cardapio a {
     justify-self: center;
   }
-  .cardapio-detalhe_e {
+  .home-cardapio-detalhe_e {
     display: block;
     position: absolute;
     width: 60px;
@@ -121,27 +121,27 @@
 }
 
 @media (max-width: 600px) {
-  .cardapio-conteudo {
+  .home-cardapio-conteudo {
     justify-self: center;
     min-width: auto;
     display: grid;
     grid-template-columns: 1fr;
   }
-  .cardapio-bg {
+  .home-cardapio-bg {
     padding-top: 59px;
   }
-  .cardapio-detalhe,
-  .cardapio-detalhe_e {
+  .home-cardapio-detalhe,
+  .home-cardapio-detalhe_e {
     width: 48px;
     height: 28px;
   }
-  .cardapio-detalhe_e {
+  .home-cardapio-detalhe_e {
     bottom: -88px;
   }
-  .cardapio {
+  .home-cardapio {
     box-shadow: 0px -60px rgba(250, 250, 250, 1);
   }
-  .cardapio p {
+  .home-cardapio p {
     margin-top: 24px;
     margin-bottom: 40px;
   }
