--- a/css/utilitario/tipografia.css
+++ b/css/utilitario/tipografia.css
@@ -22,7 +22,7 @@
   font: 500 32px/48px "Noto Sans", sans-serif;
 }
 .font-2-l-1 {
-  font: italic 500 32/36px "Noto Sans", sans-serif;
+  font: italic 500 32px/36px "Noto Sans", sans-serif;
 }
 .font-2-l-2 {
   font: 500 32px/32px "Noto Sans", sans-serif;
@@ -61,13 +61,21 @@
     font-size: 20px;
     line-height: 22px;
   }
+  .font-2-l-1 {
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .font-2-l-2 {
+    font-size: 24px;
+  }
   .font-2-s,
   .font-2-s-1 {
     font-size: 18px;
     line-height: 24px;
   }
-  .font-2-l-2 {
-    font-size: 24px;
+  .font-2-xs {
+    font-size: 16px;
+    line-height: 22px;
   }
 }
 
@@ -75,6 +83,10 @@
   .font-1-xl-1 {
     font-size: 72px;
     line-height: 72px;
+  }
+  .font-2-xl-1 {
+    font-size: 32px;
+    line-height: 32px;
   }
   .font-2-l {
     font-size: 24px;
@@ -90,6 +102,29 @@
   .font-1-xl-1 {
     font-size: 52px;
     line-height: 52px;
+  }
+  .font-2-xl-1 {
+    font-size: 28px;
+    line-height: 28px;
+  }
+  .font-2-l-1 {
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .font-2-xs {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+
+@media (max-width: 700px) {
+  .font-2-l-1 {
+    font-size: 28px;
+    line-height: 34px;
+  }
+  .font-2-xs {
+    font-size: 18px;
+    line-height: 22px;
   }
 }
 
@@ -111,6 +146,14 @@
     font-size: 20px;
     line-height: 20px;
   }
+  .font-2-l-1 {
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .font-2-xs {
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
 
 @media (max-width: 500px) {
@@ -131,6 +174,14 @@
   .font-2-s-1 {
     font-size: 14px;
     line-height: 18px;
+  }
+  .font-2-l-1 {
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .font-2-xs {
+    font-size: 14px;
+    line-height: 16px;
   }
 }
 
