--- a/css/cardapio/cardapio.css
+++ b/css/cardapio/cardapio.css
@@ -11,60 +11,29 @@
   margin-top: 72px;
 }
 
-.pratos-titulo {
+.sobremesas-bg {
+  background-color: var(--cor-c7);
+  margin-bottom: 120px;
+}
+
+.pratos-titulo,
+.sobremesas-titulo {
   padding-top: 40px;
 }
 
-.pratos-conteudo {
+.pratos-conteudo,
+.sobremesas-conteudo {
   display: flex;
   padding-top: 40px;
   padding-bottom: 40px;
   gap: 110px;
 }
 
-.pratos-conteudo img {
-  border-radius: 4px;
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-}
-
-.pratos-conteudo h2 {
-  margin-top: 40px;
-  position: relative;
-}
-
-.pratos-conteudo h2::before {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 6px;
-  left: -20px;
-  top: 15px;
-  background-color: var(--cor-c7);
-}
-
-.pratos-conteudo p {
-  margin-top: 20px;
-  max-width: 35ch;
-}
-
-.sobremesas-bg {
-  background-color: var(--cor-c7);
-  margin-bottom: 120px;
-}
-
-.sobremesas-titulo {
-  padding-top: 40px;
-}
-
 .sobremesas-conteudo {
-  display: flex;
-  padding-top: 40px;
   padding-bottom: 54px;
-  gap: 110px;
 }
 
+.pratos-conteudo img,
 .sobremesas-conteudo img {
   border-radius: 4px;
   width: 300px;
@@ -72,11 +41,13 @@
   object-fit: cover;
 }
 
+.pratos-conteudo h2,
 .sobremesas-conteudo h2 {
   margin-top: 40px;
   position: relative;
 }
 
+.pratos-conteudo h2::before,
 .sobremesas-conteudo h2::before {
   content: "";
   position: absolute;
@@ -84,32 +55,33 @@
   height: 6px;
   left: -20px;
   top: 15px;
+  background-color: var(--cor-c7);
+}
+
+.sobremesas-conteudo h2::before {
   background-color: var(--cor-p1);
 }
 
+.pratos-conteudo p,
 .sobremesas-conteudo p {
-  padding-top: 20px;
+  margin-top: 20px;
   max-width: 35ch;
 }
 
 @media (min-width: 1400px) {
-  .pratos-bg {
+  .pratos-bg,
+  .sobremesas-bg {
     margin-right: 5vw;
     margin-left: 5vw;
     border-radius: 4px 4px 0 0;
   }
   .sobremesas-bg {
-    margin-right: 5vw;
-    margin-left: 5vw;
     border-radius: 0 0 4px 4px;
   }
 }
 
 @media (min-width: 1600px) {
-  .pratos-bg {
-    margin-right: 10vw;
-    margin-left: 10vw;
-  }
+  .pratos-bg,
   .sobremesas-bg {
     margin-right: 10vw;
     margin-left: 10vw;
@@ -117,10 +89,7 @@
 }
 
 @media (min-width: 2000px) {
-  .pratos-bg {
-    margin-right: 15vw;
-    margin-left: 15vw;
-  }
+  .pratos-bg,
   .sobremesas-bg {
     margin-right: 15vw;
     margin-left: 15vw;
@@ -128,18 +97,11 @@
 }
 
 @media (max-width: 1200px) {
-  .pratos-conteudo {
-    gap: 80px;
-  }
-  .pratos-conteudo h2::before {
-    top: 12px;
-    width: 8px;
-    height: 4px;
-  }
-
+  .pratos-conteudo,
   .sobremesas-conteudo {
     gap: 80px;
   }
+  .pratos-conteudo h2::before,
   .sobremesas-conteudo h2::before {
     top: 12px;
     width: 8px;
@@ -157,83 +119,56 @@
     margin-top: 40px;
   }
   .pratos-titulo,
-  .pratos-conteudo {
-    margin-right: 5vw;
-    margin-left: 5vw;
-  }
-  .pratos-conteudo h2::before {
-    top: 12px;
-  }
+  .pratos-conteudo,
   .sobremesas-titulo,
   .sobremesas-conteudo {
     margin-right: 5vw;
     margin-left: 5vw;
   }
+  .pratos-conteudo h2::before,
   .sobremesas-conteudo h2::before {
     top: 12px;
   }
 }
 
 @media (max-width: 800px) {
-  .pratos-conteudo h2::before {
-    top: 8px;
-  }
+  .pratos-conteudo h2::before,
   .sobremesas-conteudo h2::before {
     top: 8px;
   }
 }
 
 @media (max-width: 700px) {
-  .pratos-conteudo {
+  .pratos-conteudo,
+  .sobremesas-conteudo {
     gap: 40px;
     display: grid;
     padding-bottom: 80px;
   }
-  .pratos-conteudo li {
+  .pratos-conteudo li,
+  .sobremesas-conteudo li {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto 1fr;
   }
-  .pratos-conteudo h2 {
+  .pratos-conteudo h2,
+  .sobremesas-conteudo h2 {
     padding-right: 20px;
     margin-top: 0px;
   }
-  .pratos-conteudo h2::before {
+  .pratos-conteudo h2::before,
+  .sobremesas-conteudo h2::before {
     top: 15px;
   }
   .pratos-conteudo p {
     margin-top: 10px;
     padding-right: 20px;
   }
-  .pratos-conteudo img {
-    grid-column: 2;
-    grid-row: 1/3;
-    height: 175px;
-    object-fit: cover;
-    object-position: center right;
-  }
-
-  .sobremesas-conteudo {
-    gap: 40px;
-    display: grid;
-    padding-bottom: 80px;
-  }
-  .sobremesas-conteudo li {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
-  }
-  .sobremesas-conteudo h2 {
-    padding-right: 20px;
-    margin-top: 0px;
-  }
-  .sobremesas-conteudo h2::before {
-    top: 15px;
-  }
   .sobremesas-conteudo p {
     margin-top: 0px;
     padding-right: 20px;
   }
+  .pratos-conteudo img,
   .sobremesas-conteudo img {
     grid-column: 2;
     grid-row: 1/3;
@@ -244,9 +179,7 @@
 }
 
 @media (max-width: 600px) {
-  .pratos-conteudo h2::before {
-    top: 12px;
-  }
+  .pratos-conteudo h2::before,
   .sobremesas-conteudo h2::before {
     top: 12px;
   }
