--- a/css/global/footer.css
+++ b/css/global/footer.css
@@ -41,10 +41,7 @@
 }
 
 .footer-internos a:hover {
-  padding: 0 10px;
-  background-color: var(--cor-c7);
-  color: var(--cor-p0);
-  border-radius: 4px;
+  color: var(--cor-c1);
   transition: 0.3s;
 }
 
