--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -34,6 +34,10 @@
   justify-self: start;
 }
 
+.introducao a:hover {
+  background-color: var(--cor-p5);
+  color: var(--cor-c1);
+}
 .introducao picture {
   display: grid;
   justify-content: left;
