--- a/css/global/footer.css
+++ b/css/global/footer.css
@@ -14,55 +14,32 @@
   background-color: var(--cor-c5);
 }
 
-.footer {
-  padding-top: 22px;
-  display: flex;
-}
-.footer picture {
-  position: absolute;
-}
-
-.footer-logo {
-  position: relative;
-}
-
 .footer-conteudo {
+  padding-top: 24px;
   display: grid;
-  justify-items: center;
-  width: calc(100vw - (100vw - 1160px));
-}
-
-.footer-internos li {
-  display: grid;
-  grid-template-columns: auto auto;
-  gap: 16px;
-  margin: 0 0 36px 0;
+  justify-content: center;
   justify-items: center;
 }
 
-.footer-internos a:hover {
-  color: var(--cor-c1);
-  transition: 0.3s;
-}
-
-.footer-externos {
+.footer-links {
   display: flex;
+  gap: 40px;
+  padding-bottom: 80px;
+}
+
+.footer-links li {
+  display: grid;
   gap: 20px;
-  margin-bottom: 40px;
-}
-.footer span {
-  margin-bottom: 40px;
+  grid-template-rows: auto 1fr;
 }
 
-@media (max-width: 600px) {
-  .footer-logo img {
-    width: 75%;
-  }
+.footer-links div {
+  display: grid;
+  gap: 12px;
 }
-
-@media (max-width: 800px) {
-  .footer-internos li {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
+.footer-links .icones {
+  display: flex;
+}
+.footer-conteudo .footer-fim {
+  padding-bottom: 40px;
 }
