--- a/css/global/header.css
+++ b/css/global/header.css
@@ -9,6 +9,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .header a[href="./"] {
