--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,10 @@
 @import "./unidades/unidades.css";
 
 /* Cardápio */
+@import "./cardapio/item.css";
 @import "./cardapio/cardapio.css";
 @import "./cardapio/pratos.css";
+@import "./cardapio/sobremesas.css";
 
 /* Termos */
 @import "./termos/termos.css";
